A few more changes...

--- a/Introduction to Programming.ipynb
+++ b/Introduction to Programming.ipynb
@@ -8,22 +8,8 @@
     }
    },
    "source": [
-    "# Introduction to Programming\n",
-    "### Dave Wade-Stein (dave@developintelligence.com)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Prerequisites\n",
-    "* None!\n",
-    "* If you already know how to program in a language such as __`Java`, `JavaScript`, `C/C++`, `C#`, `PHP`, `Perl`, `Python`__, or __`Ruby`__ (or similar), you probably shouldn't be in this class (unless you haven't written code in quite some time)\n",
-    "* If your only coding experience is with __`bash`__ or __`PL/SQL`__, then you're in the right class"
+    "# Learn to Code\n",
+    "#### Dave Wade-Stein (dave@developintelligence.com)"
    ]
   },
   {
@@ -35,26 +21,11 @@
    },
    "source": [
     "# About This Course\n",
-    "* This course is obviously not going to teach the same content as that of a Computer Science curriculum, but...\n",
-    " * You'll learn how to write code, i.e., how to turn a __problem statement__ into code which will _solve_ that problem\n",
+    "* You'll learn how to write code, i.e., how to turn a __problem statement__ into code which will _solve_ that problem\n",
     " * At its essence, that is ALL coding is about–converting a problem into code which solves that problem\n",
     "* It is _not_ easy–it will be challenging!\n",
     "* It will require a change in thinking!\n",
     "* ...and it will be fun!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Now download this notebook, so you can follow along...\n",
-    "* Go to this URL: \n",
-    "  * The __zip__ file should unzip automatically\n",
-    "  * It'll create a folder with a file named __`Introduction to Programming.ipynb`__ (and other files)"
    ]
   },
   {
